@@ -3,6 +3,9 @@
 - bugfix
 
 future release (aka current master branch):
++  make updater actually wait for main application to exit instead of using a timeout
++  add dockerfile for linux amd64
+
 
 v012:
 +  added european spanish translation thanks to https://github.com/IlDucci
